# MemoryGuard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  OSS_PUBLICATION_CHECKLIST.md  PUBLIC_ALPHA_NOTES.md  README.md  RELEASE_NOTES.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  getting-started.md  local-first.md  security.md
examples/: README.md
examples/agent-capture-demo/: run-demo.ps1  run-demo.sh  transcript.txt
examples/mcp-agent/: README.md  main.py
examples/quickstart/: README.md  main.py
examples/repo-ingest/: README.md  main.py
examples/sdk-usage/: README.md  main.py
infra/docker/: README.md
infra/migrations/sqlite/: 0001_init.sql
scripts/: install-alpha.ps1  install-alpha.sh  uninstall-alpha.ps1  uninstall-alpha.sh
tests/: test_installer_scripts.py
